--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -186,6 +186,26 @@ layout: default
                     </a>
                     {% endif %}
                 </nav>
+
+                <!-- Comments Section (Integrated) -->
+                <div class="integrated-comments">
+                    <h4>Discussion</h4>
+                    <script src="https://giscus.app/client.js"
+                            data-repo="Tharunaditya/tharunaditya.github.io"
+                            data-repo-id="MDEwOlJlcG9zaXRvcnkzODQyMTQ1MzY="
+                            data-category="Announcements"
+                            data-category-id="DIC_kwDOFuamCM4C1VwK"
+                            data-mapping="pathname"
+                            data-strict="0"
+                            data-reactions-enabled="0"
+                            data-emit-metadata="0"
+                            data-input-position="bottom"
+                            data-theme="transparent_dark"
+                            data-lang="en"
+                            crossorigin="anonymous"
+                            async>
+                    </script>
+                </div>
             </main>
 
             <!-- Right Sidebar: Series Navigation -->
@@ -287,53 +307,8 @@ layout: default
         </div>
     </div>
 
-    <!-- Bottom Section: Comments & Footer -->
-    <div class="container">
-        <div class="post-bottom-section">
-            <div class="comments-section">
-                <h3>💬 Comments</h3>
-                <script src="https://giscus.app/client.js"
-                        data-repo="Tharunaditya/tharunaditya.github.io"
-                        data-repo-id="MDEwOlJlcG9zaXRvcnkzODQyMTQ1MzY="
-                        data-category="Announcements"
-                        data-category-id="DIC_kwDOFuamCM4C1VwK"
-                        data-mapping="pathname"
-                        data-strict="0"
-                        data-reactions-enabled="1"
-                        data-emit-metadata="0"
-                        data-input-position="bottom"
-                        data-theme="dark"
-                        data-lang="en"
-                        crossorigin="anonymous"
-                        async>
-                </script>
-            </div>
-        </div>
-    </div>
-
     <footer class="post-footer">
         <div class="container">
-            <!-- Author Bio -->
-            <div class="author-bio">
-                <img src="{{ '/assets/images/profile.jpg' | relative_url }}" alt="{{ site.author }}" class="author-avatar" loading="lazy">
-                <div class="author-info">
-                    <h4>{{ site.author }}</h4>
-                    <p class="author-role">Security Researcher | Cybersecurity Enthusiast | AI & UI/UX Specialist</p>
-                    <p class="author-bio-text">{{ site.description }}</p>
-                    <div class="author-social">
-                        <a href="https://github.com/{{ site.github_username }}" target="_blank" aria-label="GitHub">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" aria-label="LinkedIn">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            
             <!-- Other Series Section -->
             {% assign all_series = site.posts | where_exp: "post", "post.series != nil" | map: "series" | uniq %}
             {% if all_series.size > 0 %}
