--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,9 @@
             <div class="nav-links">
                 <a href="{{ '/' | relative_url }}" class="nav-link">Home</a>
                 <a href="{{ '/about' | relative_url }}" class="nav-link">About</a>
+                {% if site.enable_blog %}
                 <a href="{{ '/blog' | relative_url }}" class="nav-link">Blog</a>
+                {% endif %}
                 <a href="{{ '/contact' | relative_url }}" class="nav-link">Contact</a>
             </div>
             <div class="nav-controls">
@@ -136,7 +138,9 @@
                     <ul>
                         <li><a href="{{ '/' | relative_url }}">Home</a></li>
                         <li><a href="{{ '/about' | relative_url }}">About</a></li>
+                        {% if site.enable_blog %}
                         <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+                        {% endif %}
                         <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
                         <li><a href="{{ '/privacy' | relative_url }}">Privacy Policy</a></li>
                     </ul>
